# fakt_ai

./: .env.example  .gitignore  README.md  crewai_first_run_output.txt  main.py  pyproject.toml  run_crewai.py  using_all_tools.ipynb
fakt_ai/: app.py  crewai_implementation.py  front_end.py  langchain_implementation.py  run_crewai.py  utils.py
notebooks/: Analyze_paper.ipynb  HelloWorld_ViceArticle.ipynb  crewai.ipynb  crewai_notebook.ipynb  using_all_tools.ipynb
notebooks/.ipynb_checkpoints/: HelloWorld_ViceArticle-checkpoint.ipynb
