[tool.poetry]
name = "fakt-ai"
version = "0.1.0"
description = "Transparent automated fact checking"
authors = ["Adam Murphy", "Stephen Schwaner"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
openai = "^1.31.1"
langchain = "^0.2.2"
langchain-core = "^0.2.4"
langsmith = "^0.1.74"
langchain-openai = "^0.1.8"
langgraph = "^0.0.64"
langchain-community = "^0.2.3"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
playwright = "^1.44.0"
crewai = {extras = ["tools"], version = "^0.41.1"}
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
