[tool.poetry]
name = "fakt_ai"
version = "0.1.0"
description = "Transparent automated fact checking"
authors = ["Adam Murphy", "Stephen Schwaner"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
openai = "^1.31.1"
langchain = "^0.2.2"
langchain-core = "^0.2.4"
langsmith = "^0.1.74"
langchain-openai = "^0.1.8"
langgraph = "^0.2.14"
langchain-community = "^0.2.13"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
playwright = "^1.44.0"
crewai = {version = "^0.51.1", extras = ["tools"]}
black = "^24.8.0"
arxiv = "^2.1.3"
praw = "^7.7.1"
xmltodict = "^0.13.0"
google-search-results = "^2.4.2"
tavily-python = "^0.4.0"
semanticscholar = "^0.8.4"
anthropic = "^0.34.2"
langchain-anthropic = "^0.1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
