[tool.poetry]
name = "fakt_ai"
version = "0.1.0"
description = "Fully transparent, automated fact-checking"
authors = ["Adam Murphy", "Stephen Schwaner"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pandas = "^2.2.3"
numpy = "^1.26.4"
openai = "^1.51.0"
langchain = "^0.2.2"
langchain-core = "^0.2.4"
langsmith = "^0.1.74"
langchain-openai = "^0.1.8"
langgraph = "^0.2.14"
langchain-community = "^0.2.13"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
playwright = "^1.44.0"
crewai = {version = "^0.51.1", extras = ["tools"]}
black = "^24.8.0"
arxiv = "^2.1.3"
praw = "^7.7.1"
xmltodict = "^0.13.0"
google-search-results = "^2.4.2"
tavily-python = "^0.5.0"
semanticscholar = "^0.8.4"
anthropic = "^0.34.2"
langchain-anthropic = "^0.1.23"
groq = "^0.11.0"
langchain-groq = "^0.1.9"
wikipedia = "^1.4.0"
gradio = "^4.44.1"
loguru = "^0.7.2"
streamlit = "^1.39.0"
exa-py = "^1.4.0"
fire = "^0.7.0"
rich = "^13.9.2"
pysqlite3-binary = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
